# sketchOS

./: '  .bacon-locations  .gdb_history  .gitignore  .nvim-dap.lua  Cargo.toml  LICENSE  README.md  ]  bacon.toml  debug  debug.sh  make-devlog.sh
.cargo/: config.toml
.dev_resources/: bonwick.txt
.github/workflows/: rust.yml
bootloader/: boot_sect_hello.asm  boot_sect_memory.asm  boot_sect_simple.asm  learn.asm
debug_files/: breaks.txt  debug.sh
devlog/: devlog-00.56.41-16:09:23.md  devlog-09-10-23_13.00.04.md  devlog-16-09-23_00.56.41.md  devlog-21.24.24-14:09:23.md  devlog-23-09-14_21.24.24.md  devlog-23-10-09_13.00.04.md  devlog-23-10-10_20.36.17.md  devlog-23-10-12_12.17.27.md  devlog-23-10-15_20.38.53.md  devlog-23-10-17_20.09.36.md  devlog-23-10-18_13.50.25.md  devlog-23-10-19_17.40.09.md  devlog-23-10-29_19.56.52.md  devlog-23-10-30_12.03.07.md  devlog-23-11-03_15.30.30.md  devlog-23-11-04_15.52.23.md  devlog-23-11-05_21.50.12.md  devlog-23-11-06_10.57.27.md  devlog-23-11-06_18.57.46.md  devlog-30-09-23_13.33.51.md  devlog.md  setup.md  todo.md
devlog/.obsidian/: workspace.json
src/: allocator.rs  file.rs  filesystem.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process_command.rs  process_commmand.rs  prompt.rs  serial.rs  text_buffer.rs  vga_buffer.rs  vga_buffer.rs.bak
src/allocator/: bump.rs  fsb.rs  linked_list.rs  slab.rs
src/filesystem/: superblock.rs
tests/: basic_boot.rs  double_faults.rs  early_keyboard_interrupt.rs  heap_allocation.rs  interrupts.rs  should_panic.rs  stack_overflow.rs  template_test.rs
(+5 files in other folders)
